--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "vue-router": "^4.1.6",
     "vxe-table": "^4.3.8",
     "vxe-table-plugin-element": "^3.0.6",
+    "moment": "^2.29.4",
     "xe-utils": "^3.5.7"
   },
   "devDependencies": {
